--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gulp": "^3.9.0",
+    "gulp-jspm-build": "0.0.12",
+    "gulp-run": "^1.6.11",
+    "html-dist": "^0.1.0",
     "jspm": "^0.16.13"
   },
   "jspm": {
@@ -23,7 +27,12 @@
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "clean-css": "npm:clean-css@^3.4.6",
       "core-js": "npm:core-js@^1.1.4"
     }
+  },
+  "devDependencies": {
+    "gulp-clean": "^0.3.1",
+    "gulp-s3": "^0.3.0"
   }
 }
