--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "debug": "node server.js debug"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^3.9.0",
-    "gulp-jspm-build": "0.0.12",
-    "gulp-run": "^1.6.11",
-    "html-dist": "^0.1.0",
-    "jspm": "^0.16.13"
+    "express": "^4.13.4"
   },
   "jspm": {
     "dependencies": {
@@ -32,7 +29,7 @@
     }
   },
   "devDependencies": {
-    "gulp-clean": "^0.3.1",
-    "gulp-s3": "^0.3.0"
+    "html-dist": "^0.1.0",
+    "jspm": "^0.16.29"
   }
 }
