--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "mean-seo": "oskarbun/mean-seo"
+    "mean-seo": "oskarbun/mean-seo",
+    "request": "^2.69.0"
   },
   "jspm": {
     "dependencies": {
